<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_games_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thegamesdb2.GamesDetails">
    <TextView
        android:text="@string/title_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/title_textview"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/overview_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/vertical" />
    </ScrollView>

    <TextView
        android:text="@string/genre_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/genre_textview"
        android:layout_below="@+id/scroll_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Genre_textview2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/Genre_textview2"
        android:layout_alignBaseline="@+id/genre_textview"
        android:layout_alignBottom="@+id/genre_textview"
        android:layout_toRightOf="@+id/overview_textview"
        android:layout_toEndOf="@+id/overview_textview" />

    <TextView
        android:text="@string/publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genre_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:id="@+id/publisher" />

    <TextView
        android:text="@string/pub_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/publisher"
        android:layout_toRightOf="@+id/publisher"
        android:layout_toEndOf="@+id/publisher"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:id="@+id/pub_textview" />

    <ImageView
        android:layout_width="260dp"
        android:layout_height="120dp"
      android:background="@drawable/rect"
        android:layout_marginTop="11dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/title_textview"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/overview_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overview_textview"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:text="@string/finish_button"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:background="#3bb9ff"
        android:textColor="#fff"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/similargames_button"
        android:layout_centerHorizontal="true"
        android:id="@+id/finish_button" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:id="@+id/imagepb"
        android:visibility="invisible" />

    <Button
        android:text="@string/similargames_button"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:background="#3bb9ff"
        android:textColor="#fff"
        android:layout_marginTop="23dp"
        android:id="@+id/similargames_button"
        android:layout_below="@+id/pub_textview"
        android:layout_alignLeft="@+id/pub_textview"
        android:layout_alignStart="@+id/pub_textview" />

</RelativeLayout>
